TN-819 initial queries verbiage fix

--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -19,7 +19,7 @@
                 privacy_url="/privacy?disableLinks=true", terms_url="/terms?disableLinks=true"
               %}
                 <div class="text-warning links-container">
-                  By clicking "NEXT" - you agree to the <a href="{{terms_url}}" target="_blank">Terms</a>, <a href="{{privacy_url}}" target="_blank">Privacy Policy</a>, and <a href="" class="terms-url" target="_blank">General Terms of Use</a> for the TrueNTH website.
+                  By clicking "NEXT" you agree to the <a href="{{terms_url}}" target="_blank">Terms</a>, <a href="{{privacy_url}}" target="_blank">Privacy Policy</a>, and <a href="" class="terms-url" target="_blank">General Terms of Use</a> for the TrueNTH website.
                 </div>
               {% endtrans %}
             </div>
