--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -56,7 +56,7 @@
                         <i class="fa fa-square-o fa-lg terms-tick-box edit-view"></i>
                         <span class="edit-view"><span class="terms-tick-box-text">{{_("By checking this box, I confirm that I have read the information notice above and consent and agree to the processing of my personal information (including my health information) on the terms described in this Consent.") }}</span></span>
                         <!-- display message specific to patient who has already consented - possible in EPROMs -->
-                        {% if user.has_role(ROLE.PATIENT) %}
+                        {% if "subject_website_consent" in config.REQUIRED_CORE_DATA %}
                           <div class="display-view text-warning tnth-hide">{{_("You have previously provided your consent to the website during a visit at your treating site. If you would like a copy of this please contact your study contact.")}}<br/></div>
                           <input type="hidden"
                           data-agree="false"
@@ -64,13 +64,14 @@
                           data-tou-type="subject website consent"
                           data-core-data-type="subject_website_consent"
                           data-url="{{tou_url}}" />
+                        {% else %}
+                          <input type="hidden"
+                            data-agree="false"
+                            data-type="terms"
+                            data-tou-type="website terms of use"
+                            data-core-data-type="website_terms_of_use"
+                            data-url="{{tou_url}}" />
                         {% endif %}
-                        <input type="hidden"
-                          data-agree="false"
-                          data-type="terms"
-                          data-tou-type="website terms of use"
-                          data-core-data-type="website_terms_of_use"
-                          data-url="{{tou_url}}" />
                     </label>
                      <label class="terms-label tnth-hide">
                         <i class="fa fa-square-o fa-lg terms-tick-box"></i>
@@ -85,6 +86,12 @@
                           data-core-data-type="privacy_policy"
                           data-tou-type="privacy policy"
                           data-url="/privacy" />
+                        <input type="hidden"
+                            data-agree="false"
+                            data-type="terms"
+                            data-tou-type="website terms of use"
+                            data-core-data-type="website_terms_of_use"
+                            data-url="{{tou_url}}" />
                     </label>
                 {% endif %}
               </div>
