--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -127,6 +127,7 @@
                     {% if user and user.has_role(ROLE.STAFF_ADMIN) %}<li><a href="{{PORTAL}}/staff">{{ _("Staff List") }}</a></li>{% endif %}
                     {% if user and user.has_role(ROLE.ADMIN) %}
                     <li><a href="{{PORTAL}}/admin">{{ _("User Administration") }}</a></li>
+                    <li><a href="{{PORTAL}}/scheduled_jobs">{{ _("Scheduled Jobs") }}</a></li>
                     <li><a href="{{PORTAL}}/settings">{{ _("Settings") }}</a></li>
                     {% endif %}
                     {% if user and (user.has_role(ROLE.ADMIN) or user.has_role(ROLE.ANALYST)) %}<li><a href="{{PORTAL}}/reporting">{{ _("Reporting Dashboard") }}</a></li>{% endif %}
