hide notification banner by default in portal wrapper

--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -76,6 +76,9 @@
     font-size: 0.85em;
   }
 }
+#notificationBanner {
+  display: none;
+}
 .tnth-white {
   color: #ECF7E5;
   background-color: transparent;
