--- a/portal/eproms/templates/eproms/portal.html
+++ b/portal/eproms/templates/eproms/portal.html
@@ -3,11 +3,11 @@
 {% block main %}
 {#
 {%- if not user.has_role('write_only') -%}
-<div class="portal-item">
-    <h2 class="tnth-subhead">{{ _("Explore TrueNTH") }}</h2>
-    <p>{{ _("Discover online tools to guide you through the cancer journey.") }}</p>
-    <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/explore">{{ _("Learn More") }}</a>
-</div>
+    <div class="portal-item">
+        <h2 class="tnth-subhead">{{ _("Explore TrueNTH") }}</h2>
+        <p>{{ _("Discover online tools to guide you through the cancer journey.") }}</p>
+        <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/explore">{{ _("Learn More") }}</a>
+    </div>
 {%- endif -%}
 #}
 {%- if config.get("SHOW_WELCOME") and user.has_role('write_only') -%}
@@ -16,52 +16,46 @@
         {{ _("Tools for navigating the prostate cancer journey") }}
     </div>
 {%- endif -%}
-{# present each intervention in turn if configured for user #}
-{%- for intervention in interventions -%}
-    {% set display = intervention.display_for_user(user) %}
-    {%- if display.access -%}
-        <div class="portal-item">
-            {%- if intervention.description and intervention.description != "" -%}<h2 class="tnth-subhead">{{ intervention.description }}</h2>{% endif %}
-            {%- if display.card_html -%}
-                    {{ display.card_html | safe }}
-                    <input type="hidden" class="link-label" value="{{display.link_label}}" />
-                    <input type="hidden" class="link-url" value="{{display.link_url}}" />
-            {%- else -%}
-                <div class="portal-description portal-description-incomplete portal-no-description-container">
-                    {%- if not display.link_url -%}
-                       <div class="button-container">
-                            <a class="btn-lg btn-tnth-primary disabled" href="#">{{ display.link_label }}</a>
-                        </div>
+<div class="portal-body">
+    {# present each intervention in turn if configured for user #}
+    {%- for intervention in interventions -%}
+        {% set display = intervention.display_for_user(user) %}
+        {%- if display.access -%}
+            <div class="portal-item">
+                {%- if intervention.name == "assessment_engine" %}
+                    {%- if display.card_html -%}
+                        {{ display.card_html | safe }}
+                        <input type="hidden" class="link-label" value="{{display.link_label}}" />
+                        <input type="hidden" class="link-url" value="{{display.link_url}}" />
                     {%- else -%}
-                        <div class="button-container">
-                            <a class="btn-lg btn-tnth-primary" href="{{ display.link_url }}">{{ display.link_label }}</a>
-                        </div>
-                    {%- endif -%}
-                </div>
-            {%- endif -%}
-        </div>
-    {%- endif -%}
-{%- endfor -%}
-<!--
-{%- if user.has_role('write_only') -%}
-    <div class="portal-flex-container">
-        <div class="portal-description portal-registration-container">
-            <h4 class="portal-description-title">{{ _("Complete Registration") }}</h2>
-            <div class="portal-description-body">
-                {{ _("Completing your registration will allow you to return here in the future to see the information you've previously entered.") }}
-                <div class="button-container">
-                    <a href="{{PORTAL}}{{ url_for('user.register', email=user.email if user.email)}}" class="btn-lg btn-tnth-primary">{{ _("Registration") }}</a>
-                </div>
+                        {{render_card_content(intervention, display, class='portal-description-incomplete portal-no-description-container')}}
+                    {%- endif %}
+                {%- else -%}
+                    {% call render_card_content(intervention, display) %}
+                        <div class="portal-description-body">{{ display.card_html | safe }}</div>
+                    {% endcall %}
+                {%- endif -%}
             </div>
-        </div>
-    </div>
-{%- endif -%}
--->
-<!--
-<div class="img-with-text flush-with-footer full-width">
-    <img src="{{ url_for('static', filename='img/man-with-canoe.jpg') }}" class="img-responsive" />
+        {%- endif -%}
+    {%- endfor -%}
 </div>
--->
 {% endblock %}
 {% block footer %}{{footer(False, True, user)}}{% endblock %}
 {% block additional_scripts %}<script src="{{ url_for('.static', filename='js/portal.js') }}"></script>{% endblock %}
+{% macro render_card_content(intervention, display, class='') -%}
+    <div class="portal-description {{class}}">
+        {%- if intervention.description and intervention.description != "" -%}<h2 class="tnth-subhead title">{{ intervention.description }}</h2>{% endif %}
+        {{ caller() }}
+        <div class="button-container">
+            {%- if not display.link_url -%}
+               <div class="button-container {{class}}">
+                    <a class="btn-lg btn-tnth-primary disabled" href="#">{{ display.link_label }}</a>
+                </div>
+            {%- else -%}
+                <div class="button-container">
+                    <a class="btn-lg btn-tnth-primary" href="{{ display.link_url }}">{{ display.link_label }}</a>
+                </div>
+            {%- endif -%}
+        </div>
+    </div>
+{%- endmacro %}
