--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1509,6 +1509,12 @@ div.footer-wrapper.right-panel {
   background: rgba(95, 103, 110, 1);
   overflow-x: hidden;
   overflow-y: auto;
+  min-height: 92.5vh;
+}
+@media (min-width: 992px) {
+  #mainDiv.portal {
+    min-height: 85.25vh;
+  }
 }
 #mainDiv.portal .container {
   max-width: 1100px;
@@ -1518,15 +1524,20 @@ div.footer-wrapper.right-panel {
   color: #F5F5F5;
   margin-bottom: 1em;
 }
+.portal-body {
+  min-height: 60vh;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .portal-item {
- margin: 3em auto 2em auto;
- min-height: 50vh;
+  max-width: 100%;
 }
 .portal-no-description-container {
   min-height: 400px;
   position: relative;
   margin-top: 10%;
-  width: 100% !important;
   font-size: @subheadSize;
   max-width: 100%;
   border: 2px solid rgba(121, 121, 121, 1);
@@ -1599,23 +1610,42 @@ div.footer-wrapper.right-panel {
   background: #43484d;
   border: 1px solid rgba(121, 121, 121, 1);
   color: #FFF;
-  padding: 2em 2em 4em 2em;
+  padding: 1em 2em 4em 2em;
   position: relative;
   width: 430px;
   max-width: 100%;
-  margin: 1em;
-  min-height: 230px;
+  margin: 1em auto;
+  min-height: 250px;
+  overflow: hidden;
+  p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   &.disabled {
     opacity: @disabledOpacity;
   }
+  & .title {
+    text-align: center;
+  }
   & a {
-  color: #FFF;
+    color: #FFF;
+  }
+  .button-container {
+    a {
+      width: 250px;
+      max-width: 100%;
+    }
+  }
+}
+@media (min-width: 992px) {
+  .portal-description {
+    margin: 1em;
   }
 }
 .portal-description-body {
-  margin-top: 1.5em;
+  margin-top: 1em;
   text-align: center;
-  font-size: @baseFontSize;
+  font-size: @baseFontSize*0.99;
 }
 .portal-flex-container .button-container,
 .portal-description .button-container {
@@ -1630,10 +1660,12 @@ div.footer-wrapper.right-panel {
   text-align: center;
 }
 
-.portal-description .button-container a {
-  width: 250px;
-  max-width: 100%;
+.portal-flex-container {
+  .portal-description {
+    padding-top: 2.5em;
+  }
 }
+
 .portal-description-incomplete .button-container {
   top: 50%;
 }
