--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% block head %}
 <head>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -18,6 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
+{% endblock %}
 {# sets container to full-width #}
 {%- set splashView = false -%}
 {%- if request.path=="/user/sign-in" or no_nav=="true" -%}
