--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -240,24 +240,20 @@
         <div class="help-block with-errors" id="erroremail"></div>
     </div>
 {%- endmacro %}
-{% macro render_emailSelector(prefix='registration', status_title=_('Registration Status:'), label=_('not registered')) -%}
-    <div id="{{prefix}}StatusContainer" class="{{prefix}}-status-container">
-        <span class="text-muted">{{status_title}}</span>
-        <h4 class="{{prefix}}-label text-warning">{{label}}</h4>
-        <div class="email-selector-container">
-            <label id="sendEmailLabel" class="text-muted">{{_("Send email to patient")}}</label>
-            <select id="profileEmailSelect" class="form-control bd-element {{prefix}}-email-selector" aria-labelledby="sendEmailLabel">
-                <option value="">{{_("Select Email...")}}</option>
-                {{caller()}}
-            </select>
-        </div>
-    </div>
-{%- endmacro %}
-{% macro profileEmailForm(prefix='registration', status_title=_('Registration Status:'), status_label=_('not registered'), class='') -%}
+{% macro profileEmailForm(person, prefix='registration', status_title=_('Registration Status:'), status_label=_('not registered'), class='') -%}
     <div class="form-group well profile-email-container {{class}}" id="profile{{prefix}}SendEmailContainer" data-profile-section-id="patientemailform" data-email-type="{{prefix}}">
        <div id="{{prefix}}StatusContainer" class="{{prefix}}-status-container">
             <span class="text-muted">{{status_title}}</span>
-            <h4 class="{{prefix}}-label text-warning">{{status_label}}</h4>
+            <!-- default display -->
+            {% if not prefix or (prefix == 'registration') %}
+                {% if person.is_registered() %}
+                    <h4 class="registration-label text-success">{{_("registered")}}</h4>
+                {% else %}
+                    <h4 class="registration-label text-warning">{{_("not registered")}}</h4>
+                {% endif %}
+            {% else %}
+                <h4 class="{{prefix}}-label text-warning">{{status_label}}</h4>
+            {% endif %}
             <div class="email-selector-container">
                 <label id="send{{prefix}}EmailLabel" class="text-muted">{{_("Send email to patient")}}</label>
                 <select id="profile{{prefix}}EmailSelect" class="form-control bd-element {{prefix}}-email-selector email-selector" aria-labelledby="sendEmailLabel">
@@ -274,8 +270,8 @@
 {% macro profileSendEmail(person) -%}
     {%- if person -%}
         <div class="email-form-container">
-            {% call profileEmailForm() %}
-                {%if person.has_role('write_only')%}
+            {% call profileEmailForm(person) %}
+                {%if not person.is_registered()%}
                     <option value="invite" data-url="{{url_for('portal.patient_invite_email', user_id=person.id)}}">{{_("TrueNTH Invite")}}</option>
                 {%endif %}
                 <option value="reminder" data-url="{{url_for('portal.patient_reminder_email', user_id=person.id)}}">{{_("TrueNTH Reminder")}}</option>
@@ -284,7 +280,7 @@
                 set P3P invite/reminder tile visibility based on whether user's org matches config variable, ACCEPT_TERMS_ON_NEXT_ORG - this is the case of MUSIC patient
             -->
             {% set cssClass %}{%- if person.first_top_organization() and (person.first_top_organization().name == config.ACCEPT_TERMS_ON_NEXT_ORG) -%}active{%-endif-%}{% endset %}
-            {% call profileEmailForm(prefix='assessment', status_title=_('P3P Assessment Status:'), status_label=_('not available'), class=cssClass) %}
+            {% call profileEmailForm(person, prefix='assessment', status_title=_('P3P Assessment Status:'), status_label=_('not available'), class=cssClass) %}
                 <option value="invite" data-url="{{url_for('portal.patient_invite_email', user_id=person.id)}}">{{_("Initial invite to complete P3P assessment")}}</option>
                 <option value="reminder" data-url="{{url_for('portal.patient_reminder_email', user_id=person.id)}}">{{_("Reminder to complete P3P assessment")}}</option>
             {% endcall %}
@@ -297,9 +293,10 @@
         <input type="hidden" name="_userId" id="_userId" value="{{person.id}}" />
         <div class="registration-status-container">
             <span class="text-muted">{{_('Registration status:')}}</span>
-            {% if person and person.has_role("write_only") %}<h4 class="text-warning registration-label">{{_("not yet registered")}}</h4>
+            {% if person.is_registered() %}
+                <h4 class="text-success registration-label">{{_('registered')}}</h4>
             {%- else -%}
-            <h4 class="text-success registration-label">{{_('registered')}}</h4>
+                <h4 class="text-warning registration-label">{{_("not yet registered")}}</h4>
             {%- endif -%}
         </div>
         <button id="btnProfileSendEmail" class="btn btn-tnth-primary sm-btn btn-send-email disabled">{{ _("Send email") }}</button>
@@ -316,17 +313,19 @@
                 <div class="profile-item-container" data-profile-section-id="communication">
                     <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
                     <div id="communicationsContainer" class="tabs-container">
-                        <div class="tab">
-                          <input id="tab-one" name="tabGroup" type="radio" data-validate="false" class="tab-input">
-                          <label for="tab-one" class="tab-label">{{_("Send reset password email to patient")}}</label>
-                          <div class="tab-content">
-                           {{resetPassword(person)}}
-                          </div>
-                        </div>
+                        {% if person.is_registered() %}
+                            <div class="tab">
+                              <input id="tab-one" name="tabGroup" type="radio" data-validate="false" class="tab-input">
+                              <label for="tab-one" class="tab-label">{{_("Send reset password email to patient")}}</label>
+                              <div class="tab-content">
+                               {{resetPassword(person)}}
+                              </div>
+                            </div>
+                        {% endif %}
                         {%- if not config.CUSTOM_PATIENT_DETAIL -%}
                             <div class="tab">
                               <input id="tab-two" name="tabGroup" type="radio" data-validate="false" class="tab-input">
-                              <label id="lbPatientRegEmail" for="tab-two" class="tab-label {% if person and person.has_role('write_only') %}active{%endif %}">{{_("Send invitation and reminder emails to patient")}}</label>
+                              <label id="lbPatientRegEmail" for="tab-two" class="tab-label {% if not person.is_registered()%}active{%endif %}">{{_("Send invitation and reminder emails to patient")}}</label>
                               <div id="sendPatientEmailTabContent" class="tab-content send-email-tab-content">
                                 {{profileSendEmail(person)}}
                               </div>
@@ -350,18 +349,11 @@
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container" data-profile-section-id="communication">
                     <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
-                    {%- if person and person.has_role(ROLE.WRITE_ONLY) -%}
+                    {%- if not person.is_registered() -%}
                         <div id="communicationsContainer" class="tabs-container">
                             <div class="tab">
-                                <input id="tab-four" name="tabStaffGroup" type="radio" data-validate="false" class="tab-input">
-                                <label for="tab-four" class="tab-label">{{_("Send reset password email to user")}}</label>
-                                <div class="tab-content">
-                                    {{resetPassword(person)}}
-                                </div>
-                            </div>
-                            <div class="tab">
                                 <input id="tab-five" name="tabStaffGroup" type="radio" data-validate="false" class="tab-input">
-                                <label id="lbStaffRegEmail" for="tab-five" class="tab-label {% if person and person.has_role('write_only') %}active{% endif %}">{{_("Send registration email to user")}}</label>
+                                <label id="lbStaffRegEmail" for="tab-five" class="tab-label active">{{_("Send registration email to user")}}</label>
                                 <div class="tab-content">
                                     {{profileStaffRegistrationEmail(person)}}
                                 </div>
