--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -19,6 +19,10 @@
     margin: 0 1em;
     vertical-align: middle;
   }
+  #tnthLogo img,
+  #tnthLogoXs img {
+    margin: 0 auto;
+  }
   * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -171,18 +175,13 @@
 }
 #tnthLogoXs {
   padding: 0;
-  display: inline-block;
+  display: block;
   width: 100px;
   max-width: 100%;
-  margin-left: 2em;
+  margin: auto;
+  text-align: center;
   img {
     height: 40px;
-    float: right;
-  }
-}
-@media (min-width: 400px) {
-  #tnthLogoXs {
-    margin-left: 6em;
   }
 }
 @media (min-width: 417px) {
