--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -4,7 +4,8 @@
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 <form id="regForm" action="" method="POST" novalidate class="form to-validate" style="margin-left: 1em">
     <div class="row">
-        {% if session.get('registration.invite_post_p3p', '') %}
+        {% set custom_invite_check = (not form.email.errors) and session.get('registration.invite_post_p3p', '') %}
+        {% if custom_invite_check %}
             <div class="col-md-push-2 col-md-8 col-xs-11">
                 <div id="registerationMessageContainer">
                     <h4 class="tnth-headline reg-title">{{_("Register Your TrueNTH Account")}}</h4>
@@ -24,7 +25,7 @@
                 </div>
             </div>
         {% endif %}
-        <div id="registrationMainContainer" class="col-md-push-3 col-md-5 col-xs-11 {% if session.get('registration.invite_post_p3p', '') %}tnth-hide{%endif%}">
+        <div id="registrationMainContainer" class="col-md-push-3 col-md-5 col-xs-11 {% if custom_invite_check %}tnth-hide{%endif%}">
              <div class="btn-social-container">
                 <h4 class="tnth-headline reg-title">{{ app_text('registration title') }}</h4>
                 {{ form.hidden_tag() }}
