--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -133,7 +133,7 @@ function checkValidity(submit) {
 
 $(document).ready(function(){
     /*
-     * this is only applicable when session variable, registration.invite_post_p3p
+     * this is only applicable when session variable, registration.invite_post_p3p is set
      * clicking on the registration button will show the section that allows user to enter password, etc
      */
     //TODO move JS to a separate file
