--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -90,7 +90,10 @@
 
 $("#adminTable").bootstrapTable({
     formatShowingRows: function (pageFrom, pageTo, totalRows) {
-        var rowInfo = "Showing "+pageFrom+" to "+pageTo+" of "+totalRows+" users";
+        var rowInfo = i18next.t("Showing {pageFrom} to {pageTo} of {totalRows} users").
+          replace("{pageFrom}", pageFrom).
+          replace("{pageTo}", pageTo).
+          replace("{totalRows}", totalRows);
         $("#tableCount").html(rowInfo);
         return rowInfo;
     },
