--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -85,7 +85,10 @@ var AT = new window.portal.AdminTool(
 });
 $("#adminTable").bootstrapTable({
     formatShowingRows: function (pageFrom, pageTo, totalRows) {
-        var rowInfo = "Showing "+pageFrom+" to "+pageTo+" of "+totalRows+" users";
+        var rowInfo = i18next.t("Showing {pageFrom} to {pageTo} of {totalRows} users").
+          replace("{pageFrom}", pageFrom).
+          replace("{pageTo}", pageTo).
+          replace("{totalRows}", totalRows);
         $("#tableCount").html(rowInfo);
         return rowInfo;
     },
