--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -75,32 +75,33 @@
 <script src="{{ url_for('static', filename='js/admin.js') }}"></script>
 {% endblock %}
 {% block document_ready %}
+var AT = new window.portal.AdminTool(
+        {{user.id}},
+        "adminList",
+        {
+          "tnthAjax": tnthAjax,
+          "i18next": i18next,
+          "tnthDates": tnthDates
+        });
+$("#adminTable").bootstrapTable({
+    formatShowingRows: function (pageFrom, pageTo, totalRows) {
+      var rowInfo;
+      setTimeout(function() {
+        rowInfo = i18next.t("Showing {pageFrom} to {pageTo} of {totalRows} users").
+        replace("{pageFrom}", pageFrom).
+        replace("{pageTo}", pageTo).
+        replace("{totalRows}", totalRows);
+        $(".pagination-detail .pagination-info").html(rowInfo);
+      }, 150);
+    },
+    exportOptions: {
+        fileName: __getExportFileName('{{_("StaffList_")}}')
+    }
+});
  __i18next.init({
   "lng": tnthDates.getUserLocale()
 }, function() {
   setTimeout(function() {
-    var AT = new window.portal.AdminTool(
-    {{user.id}},
-    "adminList",
-    {
-      "tnthAjax": tnthAjax,
-      "i18next": i18next,
-      "tnthDates": tnthDates
-    });
-    $("#adminTable").bootstrapTable({
-        formatShowingRows: function (pageFrom, pageTo, totalRows) {
-            var rowInfo = i18next.t("Showing {pageFrom} to {pageTo} of {totalRows} users").
-              replace("{pageFrom}", pageFrom).
-              replace("{pageTo}", pageTo).
-              replace("{totalRows}", totalRows);
-            $("#tableCount").html(rowInfo);
-            return rowInfo;
-        },
-        exportOptions: {
-            fileName: __getExportFileName("StaffList_")
-        }
-    });
-
     /*
      * add placeholder text for filter controls
      */
