--- a/portal/templates/staff_by_org.html
+++ b/portal/templates/staff_by_org.html
@@ -92,7 +92,11 @@ $("#adminTable").bootstrapTable({
         replace("{pageTo}", pageTo).
         replace("{totalRows}", totalRows);
         $(".pagination-detail .pagination-info").html(rowInfo);
-      }, 150);
+      }, 50);
+      return rowInfo;
+    },
+    formatRecordsPerPage: function(pageNumber) {
+      return i18next.t("{pageNumber} records per page").replace("{pageNumber}", pageNumber);
     },
     exportOptions: {
         fileName: __getExportFileName('{{_("StaffList_")}}')
