TN-981 update acknowledgment verbiage for music

--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -78,7 +78,7 @@
                         {% trans
                           privacy_url="/privacy?disableLinks=true", terms_url="terms?disableLinks=true" %}
                           <span class="terms-tick-box-text">&nbsp;By checking this box, I confirm that I have read and accept the website <a href="{{privacy_url}}" class="required-link">privacy policy</a> and
-                            <a href="{{terms_url}}" class="required-link">terms</a></span>
+                            <a href="{{terms_url}}" class="required-link">terms</a> for the TrueNTH USA website.</span>
                         {% endtrans %}
                         <input type="hidden"
                           data-agree="false"
