music terms verbiage fix

--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -19,7 +19,7 @@
                 privacy_url="/privacy?disableLinks=true", terms_url="/terms?disableLinks=true"
               %}
                 <div class="text-warning links-container">
-                  By clicking "NEXT" you agree to the <a href="{{terms_url}}" target="_blank">Terms</a>, <a href="{{privacy_url}}" target="_blank">Privacy Policy</a>, and <a href="" class="terms-url" target="_blank">General Terms of Use</a> for the TrueNTH website.
+                  By clicking "NEXT" you agree to the <a href="{{terms_url}}" target="_blank">Terms</a>, <a href="{{privacy_url}}" target="_blank">Privacy Policy</a>, and <a href="" class="terms-url" target="_blank">General Terms of Use</a> for the TrueNTH USA website.
                 </div>
               {% endtrans %}
             </div>
@@ -78,7 +78,7 @@
                         {% trans
                           privacy_url="/privacy?disableLinks=true", terms_url="terms?disableLinks=true" %}
                           <span class="terms-tick-box-text">&nbsp;By checking this box, I confirm that I have read and accept the website <a href="{{privacy_url}}" class="required-link">privacy policy</a> and
-                            <a href="{{terms_url}}" class="required-link">terms</a> for the TrueNTH USA website.</span>
+                            <a href="{{terms_url}}" class="required-link">terms</a>.</span>
                         {% endtrans %}
                         <input type="hidden"
                           data-agree="false"
