--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1991,7 +1991,7 @@ div.footer-wrapper.right-panel {
   max-width: 100%;
   height: 3em;
   display: inline-block;
-  width: 300px;
+  min-width: 300px;
   color: #FFF;
   background: @btnColor;
   border-color: @btnColor;
