--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -90,6 +90,8 @@
 </div>
 {% endblock %}
 {% block additional_scripts %}
+<!-- TODO, don't need profile JS if initial queries is own Vue instance -->
+<script src="{{ url_for('static', filename='js/profile.js') }}"></script>
 <script src="{{ url_for('static', filename='js/initialQueries.js') }}"></script>
 {% endblock %}
 {% block document_ready %}
@@ -130,7 +132,7 @@ $(document).ready(function(){
             showMain();
             hideLoader(true);
         };
-      }, 10);
+      }, 100);
   });
 });
 {% endblock %}
