--- a/portal/templates/profile/profile_base.html
+++ b/portal/templates/profile/profile_base.html
@@ -27,5 +27,6 @@
 {% endblock %}
 {% block footer %}<div class="footer-wrapper right-panel"><div class="flex footer-container"><div class="copyright-container">{%-if providerPerspective== 'true' -%}{{linksHTML(user=current_user)}}{%-else-%}{{linksHTML(user=user)}}{%-endif-%}</div><div class="logo-container">{{logo(True)}}</div></div></div>{% endblock %}
 {% block additional_scripts %}
-<script src="{{ url_for('static', filename='js/procedures.js') }}" async></script>
+  <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/procedures.js') }}" async></script>
 {% endblock %}
