--- a/portal/templates/profile/patient_profile.html
+++ b/portal/templates/profile/patient_profile.html
@@ -94,21 +94,7 @@
   {{profile_macro.profileDeceased(user, current_user)}}
   <div class="row">
     <div class="col-md-12 col-xs-12">
-      <div  class="profile-item-container editable" data-sections="locale,timezone">
-        <h4 id="timeZoneLocaleLoc" class="profile-item-title index-item">{{_("Locale / Time Zone")}}</h4>
-        <div class="view-container">
-            <table>
-                <tr class="locale-view"><td class="text-muted">{{_("Language")}}</td><td><div id="locale_view"></div></td></tr>
-                <tr class="timezone-view"><td class="text-muted">{{_("Time Zone")}}</td><td><div id="timezone_view"></div></td></tr>
-            </table>
-            <div class="get-demo-error get-locale-error error-message"></div>
-            <div class="put-demo-error error-message"></div>
-        </div>
-        <div class="edit-container flex">
-            {{profile_macro.profileLocale(user)|show_macro('language')}}
-            {{profile_macro.profileTimeZone(user)}}
-        </div>
-      </div>
+     {{profile_macro.profileLocaleTimeZone(user)}}
     </div>
   </div>
   {%- if (user and current_user) and current_user.has_role(ROLE.ADMIN) and not user.has_role(ROLE.SERVICE) %}
