--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2738,7 +2738,10 @@ div.biopsy-option:last-of-type{
 .withdrawn-label [data-truenth] {
   display: none;
 }
-
+.truenth-tou-table-text,
+.agreement {
+  display: none;
+}
 #consentDateEditContainer {
   margin-top: 2.6em;
   margin-bottom: 2em;
