--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -455,6 +455,9 @@ select:not([multiple]) {
   #profileSiteIDContainer {
     margin-top: 1.6em;
   }
+  #noEmailContainer {
+    display: none;
+  }
 }
 #profileSiteId {
   width: 300px;
