remove errand character, add new line at end of file

--- a/portal/eproms/templates/eproms/base.html
+++ b/portal/eproms/templates/eproms/base.html
@@ -89,7 +89,7 @@
                     </div>
                     {# Modal dialog opens on page load because we went to display alert(s) #}
                     <script>
-            ß          $('#alertModal').modal('show')
+                        $('#alertModal').modal('show')
                     </script>
                 {% endif %}
             {% endif %}
