--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -23,7 +23,7 @@
                    <table>
                         <tr><td class="text-muted">{{_("Name")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.fullName" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
                         <tr><td class="text-muted">{{_("Date of Birth")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.displayBirthDate" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
-                        <tr><td class="text-muted">{{_("Email")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.email" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
+                        <tr><td class="text-muted">{{_("Email")}}</td><td id="email_view">{% raw %}<section-view v-bind:data="demo.data.email" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
                         {% if person.has_role(ROLE.PATIENT) and not current_user.has_role(ROLE.PATIENT) %}<tr class="study-id-view"><td class="text-muted">{{_("Study Id")}}</td><td>{%raw%}<section-view v-bind:data="demo.data.studyId" v-bind:nodatatext="notProvidedText()"></section-view>{%endraw%}</td></tr>{% endif %}
                         {% if person.has_role(ROLE.PATIENT) and not current_user.has_role(ROLE.PATIENT) %}<tr class="site-id-view"><td class="text-muted">{{_("Site Id")}}</td><td>{%raw%}<section-view v-bind:data="demo.data.siteId" v-bind:nodatatext="notProvidedText()"></section-view>{%endraw%}</td></tr>{% endif %}
                         <tr><td class="text-muted">{{_("Cell")}}</td><td>{% raw %}<section-view v-bind:data="demo.data.cellPhone" v-bind:nodatatext="notProvidedText()"></section-view>{% endraw %}</td></tr>
@@ -248,11 +248,10 @@
         </div>
     {%- endif -%}
 {%- endmacro %}
-
 {% macro profileEmail(person) -%}
-    <div class="form-group float-input-label profile-section" id="emailGroup" data-error-field="erroremail" data-loader-container="true" data-profile-section-id="email">
+    <div class="form-group float-input-label profile-section data-update-on-validated" id="emailGroup" data-error-field="erroremail" data-loader-container="true" data-profile-section-id="email">
         <label for="email">{{_("Email Address")}}</label>
-        <input type="text" class="form-control" id="email" name="email" data-save-container-id="emailGroup" placeholder="{{ _('Email Address') }}" value="{{ person.email if person and person.email and person.email != '__no_email__' }}" v-model="demo.data.email" lazy data-customemail="true" data-error-field="erroremail" {% if person and person.has_role(ROLE.PATIENT)%}data-optional="true"{% else %}required{% endif %} />
+        <input type="text" class="form-control" id="email" name="email" data-save-container-id="emailGroup" placeholder="{{ _('Email Address') }}" value="{{ person.email if person and person.email and person.email != '__no_email__' }}" data-customemail="true" data-error-field="erroremail" {% if person and person.has_role(ROLE.PATIENT)%}data-optional="true"{% else %}required{% endif %} />
         <div class="help-block with-errors" id="erroremail"></div>
     </div>
 {%- endmacro %}
