JS refactor followup fixes

--- a/portal/templates/profile/profile_base.html
+++ b/portal/templates/profile/profile_base.html
@@ -17,8 +17,10 @@
             </h4>
           </div>
         </div>
-        {% block profile_content %}
-        {% endblock %}
+        <div id="profileMainContent">
+          {% block profile_content %}
+          {% endblock %}
+        </div>
         <br/><br/>
       </div>
     </div>
