--- a/portal/eproms/templates/eproms/website_consent_script.html
+++ b/portal/eproms/templates/eproms/website_consent_script.html
@@ -10,9 +10,7 @@
 		{%- endif -%}
 	</div>
 	<div class="continue-msg-wrapper hidden-print">
-      <div id="buttonsContainer" class="button-container">
-        <button id="continue" type="button" class="btn btn-lg btn-tnth-primary">{{ _("Continue to TrueNTH") }}</button>
-      </div>
+      <div id="buttonsContainer" class="button-container"><button id="continue" type="button" class="btn btn-lg btn-tnth-primary">{{ _("Continue to TrueNTH") }}</button></div>
     </div>
 {% endblock %}
 {% block footer %}
@@ -20,15 +18,5 @@
 {{footer(user=user)}}
 {% endblock %}
 {% block additional_scripts %}
-<script src="{{ url_for('static', filename='js/initialQueries.js') }}"></script>
-{% endblock %}
-{% block document_ready %}
-var fc = new window.FieldsChecker("{{user.id}}", false,
-                            {i18next: i18next,
-                             tnthAjax: tnthAjax,
-                             orgTool: new OrgTool(),
-                             assembleContent: assembleContent,
-                             tnthDates: tnthDates
-                            });
-fc.handleWebsiteConsentScript();
+<script src="{{url_for('.static', filename='js/websiteConsentScript.js')}}"></script>
 {% endblock %}
