MEDIDATA RAVE disable fields followup fix

--- a/portal/templates/profile/profile_macros.html
+++ b/portal/templates/profile/profile_macros.html
@@ -650,7 +650,7 @@
                 </TBODY>
             </table>
         </div>
-        <div id="profileConsentHistory" v-show="isEditable() && consent.hasConsentHistory">
+        <div id="profileConsentHistory" v-show="isConsentEditable() && consent.hasConsentHistory">
             <br/><button id="viewConsentHistoryButton" class='btn btn-tnth-primary sm-btn'>{{_("History")}}</button>
             <div class="modal fade" id="consentHistoryModal" tabindex="-1" role="dialog" aria-labelledby="consentHistoryModal">
                 <div class="modal-dialog" role="document">
